--- a/_pages/vosd.html
+++ b/_pages/vosd.html
@@ -1,5 +1,5 @@
 ---
-title: Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences
+title: Varieties of Social Democracy
 permalink: /vosd/
 author_profile: true
 ---
