--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,19 +1,9 @@
----
+r---
 title: Research
 permalink: /research/
 author_profile: true
 ---
-<h1 style="font-size:1.6em; margin-top:1.5em;">Current projects</h1>
-
-–	Crulli, M., Emanuele, V., & Trastulli, F. Intersectionality and electoral participation.
-–	Dassonneville, R., & Trastulli, F. Working-Class Electoral Cross-Pressures in 9 Western European Countries (1989-2024).
-–	De Sio, L., Paparo, A., & Trastulli, F. Who takes the cue? Experimental evidence on voters’ political sophistication in party and leader cueing of issue positions.
-–	Lourenço, P., Prearo, M., & Trastulli, F. Riding the Electoral Cycle: Dynamics of Anti-LGBTIQ+ Mobilisation in Four Western European Countries.
-–	Trastulli, F. The Intersectional Decline of Working-Class Support for the Left: Evidence from 19 Western European countries (2002-2020).
-–	Trastulli, F., Prearo, M., & Pansardi, P. Individual-level determinants of LGBTIQ+ issue attitudes: Evidence from the traditionalist Italian context.
-
-<h2 style="font-size:1.6em;">Publications</h2>
-<h2 style="font-size:1.3em;">Journal articles</h2>
+<h2 style="font-size:1.3em;">Articles</h2>
 1.	Off, G., & Trastulli, F. (2025). Who Prioritises What? Determinants and Measurement of Voters’ Issue Prioritisation. *European Journal of Political Research*. https://doi.org/10.1017/S1475676525100091. 
 2.	Trastulli, F. (2025). Left Parties’ Strategies and Working-Class Vote in Contemporary Western Europe (2002-2020). *Electoral Studies*, 98, Article 103006. 
 3.	Capati, A., & Trastulli, F. (2025). Large-Scale Crises and Variation in Social Democratic Europeanism: The Italian Democratic Party. *Politics and Governance*. https://doi.org/10.17645/pag.11047.
@@ -34,13 +24,21 @@ author_profile: true
 18.	Trastulli, F. (2022). «Fence-Building» or «Preservation»: The Paths to Social Democratic Nationalist Position-Taking in Western Europe (2008-2018). *Polis*, 2, 189-218.
 19.	Trastulli, F. (2021). The Broken Promise of Postmaterialism? Analysing Western European Parties’ Emphases Through Manifesto Data (1990-2019). *Italian Political Science*, 15(3), 273-304. 
 
-<h2 style="font-size:1.3em;">Monographs</h2>
+<h2 style="font-size:1.3em;">Books</h2>
 1.	Prearo, M., & Trastulli, F. (2025). *Politica e cittadinanza LGBTQIA+: Tra opinione pubblica, diritti e partecipazione [LGBTQIA+ politics and citizens: Public opinion, rights, and participation]*. Pisa: Edizioni ETS.
 –	*Under contract*: Trastulli, F. *Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences*. Palgrave Macmillan.
 
-<h2 style="font-size:1.3em;">Book chapters</h2>
+<h2 style="font-size:1.3em;">Chapters in books</h2>
 1.	Prearo, M, & Trastulli, F. (2025). Una carriera arcobaleno? Elezioni e rappresentanza politica LGBT+ in Italia [A rainbow career? Elections and LGBT+ political representation in Italy]. In Pansardi, P. (ed.), *Genere e leadership politica: Le carriere politiche delle donne e delle persone LGBT+ in Italia* (pp. 102-127). Feltrinelli. 
 2.	Angelucci, D., Trastulli, F., & Tuorto, D. (2024). Cronaca di una morte annunciata. La partecipazione elettorale in Italia, 2022 [Chronicle of a death foretold. Electoral participation in Italy, 2022]. In Chiaramonte, A., & De Sio, L. (eds.), *Un polo solo. Le elezioni politiche del 2022* (pp. 107-138). Il Mulino. 
 3.	Bolgherini, S., & Trastulli, F. (2023). Voglia di sinistra: la collocazione sullo spettro politico [Left-right self-collocation of PD’s selectorate at the 2023 primaries]. In Grimaldi, S., & Venturino, F. (eds.), *Un nuovo inizio? Il Partito Democratico e l’elezione di Elly Schlein* (pp. 75-86). Padova University Press. 
 4.	Testa, A., & Trastulli, F. (2023). Nuova segretaria, solita passione: sempre altissimo l’interesse per la politica [2023 PD primaries and selectorate’s interest in politics]. In Grimaldi, S., & Venturino, F. (eds.), *Un nuovo inizio? Il Partito Democratico e l’elezione di Elly Schlein* (pp. 87-96). Padova University Press. 
 5.	Trastulli, F. (2021). Manifesti elettorali e posizionamento ideologico [Electoral manifestos and ideological positioning]. In Acampa, S., Gargiulo, G., Gatti, R., Mazza, R., & Paolillo, M. (eds.), *Saperi, conoscenze ed esperienze in formazione* (pp. 48-52). libreriauniversitaria.it Edizioni. 
+
+<h2 style="font-size:1.4em;">Current projects</h2>
+–	Crulli, M., Emanuele, V., & Trastulli, F. Intersectionality and electoral participation.
+–	Dassonneville, R., & Trastulli, F. Working-Class Electoral Cross-Pressures in 9 Western European Countries (1989-2024).
+–	De Sio, L., Paparo, A., & Trastulli, F. Who takes the cue? Experimental evidence on voters’ political sophistication in party and leader cueing of issue positions.
+–	Lourenço, P., Prearo, M., & Trastulli, F. Riding the Electoral Cycle: Dynamics of Anti-LGBTIQ+ Mobilisation in Four Western European Countries.
+–	Trastulli, F. The Intersectional Decline of Working-Class Support for the Left: Evidence from 19 Western European countries (2002-2020).
+–	Trastulli, F., Prearo, M., & Pansardi, P. Individual-level determinants of LGBTIQ+ issue attitudes: Evidence from the traditionalist Italian context.
