--- a/_pages/research.html
+++ b/_pages/research.html
@@ -4,100 +4,56 @@ permalink: /research/
 author_profile: true
 ---
 
-## Articles
+<div style="margin-top:-1.5em;">
 
-1. Off, G., & Trastulli, F. (2025). Who Prioritises What? Determinants and Measurement of Voters’ Issue Prioritisation.  
-   *European Journal of Political Research*.  
+<h2 style="font-size:1.3em;">Articles</h2>
+1. Off, G., & Trastulli, F. (2025). Who Prioritises What? Determinants and Measurement of Voters’ Issue Prioritisation. *European Journal of Political Research*.  
    https://doi.org/10.1017/S1475676525100091
-
-2. Trastulli, F. (2025). Left Parties’ Strategies and Working-Class Vote in Contemporary Western Europe (2002–2020).  
-   *Electoral Studies*, 98, Article 103006.
-
-3. Capati, A., & Trastulli, F. (2025). Large-Scale Crises and Variation in Social Democratic Europeanism: The Italian Democratic Party.  
-   *Politics and Governance*.  
+2. Trastulli, F. (2025). Left Parties’ Strategies and Working-Class Vote in Contemporary Western Europe (2002–2020). *Electoral Studies*, 98, Article 103006.
+3. Capati, A., & Trastulli, F. (2025). Large-Scale Crises and Variation in Social Democratic Europeanism: The Italian Democratic Party. *Politics and Governance*.  
    https://doi.org/10.17645/pag.11047
-
-4. Trastulli, F. (2025). Family Issues: Conceptualizing Party Family at the Issue Level.  
-   *Italian Political Science Review – Rivista Italiana di Scienza Politica*.  
+4. Trastulli, F. (2025). Family Issues: Conceptualizing Party Family at the Issue Level. *Italian Political Science Review – Rivista Italiana di Scienza Politica*.  
    https://doi.org/10.1017/ipo.2025.10065
-
-5. Prearo, M., & Trastulli, F. (2025). Rainbow Ballots: Introducing the Italian LGBTIQ+ Electoral Survey 2024.  
-   *Italian Journal of Electoral Studies (IJES)*.  
+5. Prearo, M., & Trastulli, F. (2025). Rainbow Ballots: Introducing the Italian LGBTIQ+ Electoral Survey 2024. *Italian Journal of Electoral Studies (IJES)*.  
    https://doi.org/10.36253/qoe-17696
-
-6. Prearo, M., & Trastulli, F. (2025). Double-edged Swords? Party Ideology, Activism, and Visibility in the Careers of Italian LGBT+ Politicians.  
-   *Social Politics*.  
+6. Prearo, M., & Trastulli, F. (2025). Double-edged Swords? Party Ideology, Activism, and Visibility in the Careers of Italian LGBT+ Politicians. *Social Politics*.  
    https://doi.org/10.1093/sp/jxae035
+7. Capati, A., & Trastulli, F. (2025). A Quiet Convergence: Russian Full-Scale Invasion of Ukraine and Italian Parties’ Positions on the EU. *Global Policy*, 16(1), 28–44.
+8. Emanuele, V., & Trastulli, F. (2025). Left governmental power and the reduction of inequalities in Western Europe (1871–2020). *Perspectives on Politics*, 23(3), 924–943.
+9. Prearo, M., & Trastulli, F. (2024). LGBTIQ+ Scholars within Political Science: An Exploratory Review of PSAs’ Good Practices and (Un)Available Data. *Italian Political Science*, 19(3), 309–323.
+10. Emanuele, V., Guidi, M., Chiaramonte, A., Moschella, M., Bosco, A., Crulli, M., Improta, M., Lupi, M., Mannoni, E., Marino, B., Paparo, A., Piccolino, G., Sesti Osseo, G., Soare, S. C., Trastulli, F., Verzichelli, L. (2024). New Conflicts’ Mapping in the Age of Globalization (NEWCOMING). *Italian Political Science*, 19(2), 168–180.
+11. Prearo, M., & Trastulli, F. (2024). Beyond electoral performance: reviewing and advancing the literature on LGBTIQ+ political careers. *Italian Political Science Review – Rivista Italiana di Scienza Politica*, 54(2), 154–160.
+12. Trastulli, F., & Mastroianni, L. (2024). What's new under the sun? A corpus linguistic analysis of the 2022 Italian election campaign themes in party manifestos. *Modern Italy*, 29(1), 51–72.
+13. Capati, A., Improta, M., & Trastulli, F. (2024). COVID-19 and party competition over the EU: Italy in early pandemic times. *European Politics and Society*, 25(1), 93–114.
+14. Emanuele, V., & Trastulli, F. (2023). Squeezing Blood from a Turnip? The Resilience of Social Democratic Governmental Power in Western Europe (1871–2022). *Representation*, 60(4), 645–663.
+15. Trastulli, F. (2022). More Left or Left No More? An in-depth analysis of Western European social democratic parties’ emphasis on traditional economic left goals (1944–2021). *Frontiers in Political Science*, 4, Article 873948.
+16. Trastulli, F. (2022). Two is Better than One? Testing a Deductive MARPOR-based Left–Right Index on Western Europe (1999–2019). *Italian Journal of Electoral Studies (IJES)*, 85(2), 59–76.
+17. Improta, M., Mannoni, E., Marcellino, C., & Trastulli, F. (2022). Voters, issues, and party loyalty: the 2022 Italian election under the magnifying glass. *Italian Journal of Electoral Studies (IJES)*, 85(2), 3–27.
+18. Trastulli, F. (2022). «Fence-Building» or «Preservation»: The Paths to Social Democratic Nationalist Position-Taking in Western Europe (2008–2018). *Polis*, 2, 189–218.
+19. Trastulli, F. (2021). The Broken Promise of Postmaterialism? Analysing Western European Parties’ Emphases Through Manifesto Data (1990–2019). *Italian Political Science*, 15(3), 273–304.
 
-7. Capati, A., & Trastulli, F. (2025). A Quiet Convergence: Russian Full-Scale Invasion of Ukraine and Italian Parties’ Positions on the EU.  
-   *Global Policy*, 16(1), 28–44.
+<h2 style="font-size:1.3em;">Books</h2>
+1. Prearo, M., & Trastulli, F. (2025). *Politica e cittadinanza LGBTQIA+: Tra opinione pubblica, diritti e partecipazione*. Pisa: Edizioni ETS.
+2. *Under contract*: Trastulli, F. *Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences*. Palgrave Macmillan.
 
-8. Emanuele, V., & Trastulli, F. (2025). Left governmental power and the reduction of inequalities in Western Europe (1871–2020).  
-   *Perspectives on Politics*, 23(3), 924–943.
-
-9. Prearo, M., & Trastulli, F. (2024). LGBTIQ+ Scholars within Political Science: An Exploratory Review of PSAs’ Good Practices and (Un)Available Data.  
-   *Italian Political Science*, 19(3), 309–323.
-
-10. Emanuele, V., Guidi, M., Chiaramonte, A., Moschella, M., Bosco, A., Crulli, M., Improta, M., Lupi, M., Mannoni, E., Marino, B., Paparo, A., Piccolino, G., Sesti Osseo, G., Soare, S. C., Trastulli, F., Verzichelli, L. (2024). New Conflicts’ Mapping in the Age of Globalization (NEWCOMING).  
-    *Italian Political Science*, 19(2), 168–180.
-
-11. Prearo, M., & Trastulli, F. (2024). Beyond electoral performance: reviewing and advancing the literature on LGBTIQ+ political careers.  
-    *Italian Political Science Review – Rivista Italiana di Scienza Politica*, 54(2), 154–160.
-
-12. Trastulli, F., & Mastroianni, L. (2024). What's new under the sun? A corpus linguistic analysis of the 2022 Italian election campaign themes in party manifestos.  
-    *Modern Italy*, 29(1), 51–72.
-
-13. Capati, A., Improta, M., & Trastulli, F. (2024). COVID-19 and party competition over the EU: Italy in Early Pandemic Times.  
-    *European Politics and Society*, 25(1), 93–114.
-
-14. Emanuele, V., & Trastulli, F. (2023). Squeezing Blood from a Turnip? The Resilience of Social Democratic Governmental Power in Western Europe (1871–2022).  
-    *Representation*, 60(4), 645–663.
-
-15. Trastulli, F. (2022). More Left or Left No More? An in-depth analysis of Western European social democratic parties’ emphasis on traditional economic left goals (1944–2021).  
-    *Frontiers in Political Science*, 4, Article 873948.
-
-16. Trastulli, F. (2022). Two is Better than One? Testing a Deductive MARPOR-based Left–Right Index on Western Europe (1999–2019).  
-    *Italian Journal of Electoral Studies (IJES)*, 85(2), 59–76.
-
-17. Improta, M., Mannoni, E., Marcellino, C., & Trastulli, F. (2022). Voters, issues, and party loyalty: the 2022 Italian election under the magnifying glass.  
-    *Italian Journal of Electoral Studies (IJES)*, 85(2), 3–27.
-
-18. Trastulli, F. (2022). «Fence-Building» or «Preservation»: The Paths to Social Democratic Nationalist Position-Taking in Western Europe (2008–2018).  
-    *Polis*, 2, 189–218.
-
-19. Trastulli, F. (2021). The Broken Promise of Postmaterialism? Analysing Western European Parties’ Emphases Through Manifesto Data (1990–2019).  
-    *Italian Political Science*, 15(3), 273–304.
-
-## Books
-
-1. Prearo, M., & Trastulli, F. (2025). *Politica e cittadinanza LGBTQIA+: Tra opinione pubblica, diritti e partecipazione [LGBTQIA+ politics and citizens: Public opinion, rights, and participation]*.  
-   Pisa: Edizioni ETS.
-
-2. *Under contract*: Trastulli, F. *Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences*.  
-   Palgrave Macmillan.
-
-## Chapters
-
-1. Prearo, M, & Trastulli, F. (2025). Una carriera arcobaleno? Elezioni e rappresentanza politica LGBT+ in Italia.  
-   In Pansardi, P. (ed.), *Genere e leadership politica: Le carriere politiche delle donne e delle persone LGBT+ in Italia* (pp. 102–127). Feltrinelli.
-
+<h2 style="font-size:1.3em;">Chapters</h2>
+1. Prearo, M., & Trastulli, F. (2025). Una carriera arcobaleno? Elezioni e rappresentanza politica LGBT+ in Italia.  
+   In Pansardi, P. (ed.), *Genere e leadership politica* (pp. 102–127). Feltrinelli.
 2. Angelucci, D., Trastulli, F., & Tuorto, D. (2024). Cronaca di una morte annunciata. La partecipazione elettorale in Italia, 2022.  
    In Chiaramonte, A., & De Sio, L. (eds.), *Un polo solo* (pp. 107–138). Il Mulino.
-
 3. Bolgherini, S., & Trastulli, F. (2023). Voglia di sinistra: la collocazione sullo spettro politico.  
-   In Grimaldi, S., & Venturino, F. (eds.), *Un nuovo inizio? Il Partito Democratico e l’elezione di Elly Schlein* (pp. 75–86). Padova University Press.
-
+   In Grimaldi, S., & Venturino, F. (eds.), *Un nuovo inizio?* (pp. 75–86). Padova University Press.
 4. Testa, A., & Trastulli, F. (2023). Nuova segretaria, solita passione: sempre altissimo l’interesse per la politica.  
    In Grimaldi, S., & Venturino, F. (eds.), *Un nuovo inizio?* (pp. 87–96). Padova University Press.
-
 5. Trastulli, F. (2021). Manifesti elettorali e posizionamento ideologico.  
-   In Acampa, S., Gargiulo, G., Gatti, R., Mazza, R., & Paolillo, M. (eds.), *Saperi, conoscenze ed esperienze in formazione* (pp. 48–52). libreriauniversitaria.it Edizioni.
+   In Acampa, S., et al. (eds.), *Saperi, conoscenze ed esperienze in formazione* (pp. 48–52).
 
-## Current projects
-
+<h2 style="font-size:1.5em;">Current projects</h2>
 - Crulli, M., Emanuele, V., & Trastulli, F. Intersectionality and electoral participation.
 - Dassonneville, R., & Trastulli, F. Working-Class Electoral Cross-Pressures in 9 Western European Countries (1989–2024).
 - De Sio, L., Paparo, A., & Trastulli, F. Who takes the cue? Experimental evidence on voters’ political sophistication in party and leader cueing of issue positions.
 - Lourenço, P., Prearo, M., & Trastulli, F. Riding the Electoral Cycle: Dynamics of Anti-LGBTIQ+ Mobilisation in Four Western European Countries.
 - Trastulli, F. The Intersectional Decline of Working-Class Support for the Left: Evidence from 19 Western European countries (2002–2020).
 - Trastulli, F., Prearo, M., & Pansardi, P. Individual-level determinants of LGBTIQ+ issue attitudes: Evidence from the traditionalist Italian context.
+
+</div>
