--- a/_pages/research.html
+++ b/_pages/research.html
@@ -22,6 +22,10 @@ author_profile: true
     <span class="me">Trastulli, F.</span> (2025).
     Left Parties’ Strategies and Working-Class Vote in Contemporary Western Europe (2002–2020).
     <em>Electoral Studies</em>, 98, Article 103006.
+     <a href="https://doi.org/10.1016/j.electstud.2025.103006" class="doi">
+      https://doi.org/10.1016/j.electstud.2025.103006
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
@@ -41,6 +45,7 @@ author_profile: true
     <a href="https://doi.org/10.1017/ipo.2025.10065" class="doi">
       https://doi.org/10.1017/ipo.2025.10065
     </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
@@ -60,84 +65,134 @@ author_profile: true
     <a href="https://doi.org/10.1093/sp/jxae035" class="doi">
       https://doi.org/10.1093/sp/jxae035
     </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     Capati, A., &amp; <span class="me">Trastulli, F.</span> (2025).
     A Quiet Convergence: Russian Full-Scale Invasion of Ukraine and Italian Parties’ Positions on the EU.
     <em>Global Policy</em>, 16(1), 28–44.
+    <a href="https://doi.org/10.1111/1758-5899.13466" class="doi">
+      https://doi.org/10.1111/1758-5899.13466
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     Emanuele, V., &amp; <span class="me">Trastulli, F.</span> (2025).
     Left governmental power and the reduction of inequalities in Western Europe (1871–2020).
     <em>Perspectives on Politics</em>, 23(3), 924–943.
+    <a href="https://doi.org/10.1017/S1537592724000628" class="doi">
+      https://doi.org/10.1017/S1537592724000628
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2024).
-    LGBTIQ+ Scholars within Political Science.
+    LGBTIQ+ Scholars within Political Science: An Exploratory Review of PSAs’ Good Practices and (Un)Available Data     
     <em>Italian Political Science</em>, 19(3), 309–323.
+    <a href="https://doi.org/10.69101/IPS.2024.19.3.7" class="doi">
+      https://doi.org/10.69101/IPS.2024.19.3.7 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
-    Emanuele, V., et al. (2024).
+    Emanuele, V., Guidi, M., Chiaramonte, A., Moschella, M., Bosco, A., Crulli, M., Improta, M., Lupi, M., Mannoni, E., Marino, B., Paparo, A., Piccolino, G., Sesti Osseo, G., Soare, S. C., <span class="me">Trastulli, F.</span>, &amp; Verzichelli, L. (2024).
     New Conflicts’ Mapping in the Age of Globalization (NEWCOMING).
     <em>Italian Political Science</em>, 19(2), 168–180.
+    <a href="https://doi.org/10.69101/IPS.2024.19.2.5" class="doi">
+      https://doi.org/10.69101/IPS.2024.19.2.5 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2024).
-    Beyond electoral performance.
-    <em>Italian Political Science Review</em>, 54(2), 154–160.
+    Beyond electoral performance: reviewing and advancing the literature on LGBTIQ+ political careers.
+    <em>Italian Political Science Review – Rivista Italiana di Scienza Politica</em>, 54(2), 154–160.
+    <a href="https://doi.org/10.1017/ipo.2024.3" class="doi">
+      https://doi.org/10.1017/ipo.2024.3 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     <span class="me">Trastulli, F.</span>, &amp; Mastroianni, L. (2024).
-    What's new under the sun?
+    What's new under the sun? A corpus linguistic analysis of the 2022 Italian election campaign themes in party manifestos.
     <em>Modern Italy</em>, 29(1), 51–72.
+    <a href="https://doi.org/10.1017/mit.2023.45" class="doi">
+      https://doi.org/10.1017/mit.2023.45 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     Capati, A., Improta, M., &amp; <span class="me">Trastulli, F.</span> (2024).
-    COVID-19 and party competition over the EU.
+    COVID-19 and party competition over the EU: Italy in Early Pandemic Times.
     <em>European Politics and Society</em>, 25(1), 93–114.
+    <a href="https://doi.org/10.1080/23745118.2022.2095170" class="doi">
+      https://doi.org/10.1080/23745118.2022.2095170 
+    </a>
   </li>
 
   <li>
     Emanuele, V., &amp; <span class="me">Trastulli, F.</span> (2023).
-    Squeezing Blood from a Turnip?
+    Squeezing Blood from a Turnip? The Resilience of Social Democratic Governmental Power in Western Europe (1871–2022)-
     <em>Representation</em>, 60(4), 645–663.
+    <a href="https://doi.org/10.1080/00344893.2023.2292174" class="doi">
+      https://doi.org/10.1080/00344893.2023.2292174
+    </a>
   </li>
 
   <li>
     <span class="me">Trastulli, F.</span> (2022).
-    More Left or Left No More?
+    More Left or Left No More? An In-depth Analysis of Western European Social Democratic Parties' Emphasis on Traditional Economic Left Goals (1944–2021).
     <em>Frontiers in Political Science</em>, 4, Article 873948.
+    <a href="https://doi.org/10.3389/fpos.2022.873948" class="doi">
+      https://doi.org/10.3389/fpos.2022.873948 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     <span class="me">Trastulli, F.</span> (2022).
-    Two is Better than One?
+    Two is better than one? Testing a deductive MARPOR-based left-right index on Western Europe (1999-2019).
     <em>Italian Journal of Electoral Studies (IJES)</em>, 85(2), 59–76.
+    <a href="https://doi.org/10.36253/qoe-13796" class="doi">
+      https://doi.org/10.36253/qoe-13796 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
-    Improta, M., et al. (2022).
-    Voters, issues, and party loyalty.
+    Improta, M., Mannoni, E., Marcellino, C., &amp; <span class="me">Trastulli, F.</span> (2022).
+    Voters, issues, and party loyalty: the 2022 Italian election under the magnifying glass.
     <em>Italian Journal of Electoral Studies (IJES)</em>, 85(2), 3–27.
+    <a href="https://doi.org/10.36253/qoe-13956" class="doi">
+      https://doi.org/10.36253/qoe-13956 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
     <span class="me">Trastulli, F.</span> (2022).
-    «Fence-Building» or «Preservation».
+    «Fence-Building» or «Preservation»: The Paths to Social Democratic Nationalist Position-Taking in Western Europe (2008-2018).
     <em>Polis</em>, 2, 189–218.
+    <a href="https://www.rivisteweb.it/doi/10.1424/104521" class="doi">
+      https://www.rivisteweb.it/doi/10.1424/104521 
+    </a>
   </li>
 
   <li>
     <span class="me">Trastulli, F.</span> (2021).
     The Broken Promise of Postmaterialism?
     <em>Italian Political Science</em>, 15(3), 273–304.
+    <a href="https://doi.org/10.69101/IPS.2020.15.3.3" class="doi">
+      https://doi.org/10.69101/IPS.2020.15.3.3 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 </ol>
 
@@ -145,13 +200,18 @@ author_profile: true
 <ol>
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2025).
-    <em>Politica e cittadinanza LGBTQIA+</em>.
+    <em>Politica e cittadinanza LGBTQIA+: Tra opinione pubblica, diritti e partecipazione</em> [LGBTQIA+ politics and citizens: Public opinion, rights, and participation].
     Pisa: Edizioni ETS.
+    <a href="https://www.edizioniets.com/scheda.asp?n=9788846772589" class="doi">
+      https://www.edizioniets.com/scheda.asp?n=9788846772589 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
+  
   <li>
     <em>Under contract</em>:
     <span class="me">Trastulli, F.</span>.
-    <em>Varieties of Social Democracy in Western Europe</em>.
+    <em>Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences</em>.
     Palgrave Macmillan.
     <span class="badge forthcoming">Forthcoming</span>
   </li>
@@ -160,34 +220,46 @@ author_profile: true
 <h2>Chapters</h2>
 <ol>
   <li>
-    Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2025).
-    In Pansardi, P. (ed.), <em>Genere e leadership politica</em> (pp. 102–127). Feltrinelli.
+    Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2025). Una carriera arcobaleno? Elezioni e rappresentanza politica LGBT+ in Italia [A rainbow career? Elections and LGBT+ political representation in Italy].
+    In Pansardi, P. (ed.), <em>Genere e leadership politica: Le carriere politiche delle donne e delle persone LGBT+ in Italia</em> (pp. 102–127). Feltrinelli.
+    <a href="https://fondazionefeltrinelli.it/scopri/genere-e-leadership-politica/" class="doi">
+      https://fondazionefeltrinelli.it/scopri/genere-e-leadership-politica/ 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
-    Angelucci, D., <span class="me">Trastulli, F.</span>, &amp; Tuorto, D. (2024).
-    In Chiaramonte, A., &amp; De Sio, L. (eds.), <em>Un polo solo</em> (pp. 107–138). Il Mulino.
+    Angelucci, D., <span class="me">Trastulli, F.</span>, &amp; Tuorto, D. (2024). Cronaca di una morte annunciata. La partecipazione elettorale in Italia, 2022 [Chronicle of a death foretold. Electoral participation in Italy, 2022].
+    In Chiaramonte, A., &amp; De Sio, L. (eds.), <em>Un polo solo. Le elezioni politiche del 2022</em> (pp. 107–138). Il Mulino.
   </li>
 
   <li>
-    Bolgherini, S., &amp; <span class="me">Trastulli, F.</span> (2023).
-    In Grimaldi, S., &amp; Venturino, F. (eds.), <em>Un nuovo inizio?</em> (pp. 75–86).
+    Bolgherini, S., &amp; <span class="me">Trastulli, F.</span> (2023). Voglia di sinistra: la collocazione sullo spettro politico [Left-right self-collocation of PD’s selectorate at the 2023 primaries].
+    In Grimaldi, S., &amp; Venturino, F. (eds.), <em>Un nuovo inizio? Il Partito Democratico e l’elezione di Elly Schlein</em> (pp. 75–86). Padova University Press.
+    <a href="https://www.padovauniversitypress.it/it/publications/9788869383717" class="doi">
+      https://www.padovauniversitypress.it/it/publications/9788869383717 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
-    Testa, A., &amp; <span class="me">Trastulli, F.</span> (2023).
-    In Grimaldi, S., &amp; Venturino, F. (eds.), <em>Un nuovo inizio?</em> (pp. 87–96).
+    Testa, A., &amp; <span class="me">Trastulli, F.</span> (2023). Nuova segretaria, solita passione: sempre altissimo l’interesse per la politica [2023 PD primaries and selectorate’s interest in politics].
+    In Grimaldi, S., &amp; Venturino, F. (eds.), <em>Un nuovo inizio? Il Partito Democratico e l’elezione di Elly Schlein</em> (pp. 87-96). Padova University Press.
+    <a href="https://www.padovauniversitypress.it/it/publications/9788869383717" class="doi">
+      https://www.padovauniversitypress.it/it/publications/9788869383717 
+    </a>
+    <span class="badge oa">Open Access</span>
   </li>
 
   <li>
-    <span class="me">Trastulli, F.</span> (2021).
-    In Acampa, S., et al. (eds.),
-    <em>Saperi, conoscenze ed esperienze in formazione</em> (pp. 48–52).
+    <span class="me">Trastulli, F.</span> (2021). Manifesti elettorali e posizionamento ideologico [Electoral manifestos and ideological positioning].
+    In Acampa, S., Gargiulo, G., Gatti, R., Mazza, R., &amp; Paolillo, M. (eds.), <em>Saperi, conoscenze ed esperienze in formazione</em> (pp. 48–52). libreriauniversitaria.it Edizioni. 
   </li>
 </ol>
 
 <h2>Current projects</h2>
 <ul>
+  <li>Angelucci, A., Carrieri, L., <span class="me">Trastulli, F.</span>, & Vittori, D. Class, gender, and vote for left and radical right parties.</li>
   <li>Crulli, M., Emanuele, V., &amp; <span class="me">Trastulli, F.</span>. Intersectionality and electoral participation.</li>
   <li>Dassonneville, R., &amp; <span class="me">Trastulli, F.</span>. Working-Class Electoral Cross-Pressures.</li>
   <li>De Sio, L., Paparo, A., &amp; <span class="me">Trastulli, F.</span>. Who takes the cue?</li>
