--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,32 @@
 ---
-layout: archive
-title: "Teaching"
+title: Teaching
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+<div class="teaching-list">
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<h2>Political Science</h2>
+<ul>
+  <li>Full course (54 hours), Bachelor's degree in Languages for International Relations, Superior School of Linguistic Mediation, University of Mantua Foundation (a.y. 2025/2026)</li>
+  <li>16-hour course, Bachelor's degree in Strategic Studies for Security and International Policies, University of Verona (a.y. 2023/2024)</li>
+</ul>
+
+<h2>Research Methods for the Political and Social Sciences</h2>
+<ul>
+  <li>36-hour courses, Bachelor's degree in Strategic Studies for Security and International Policies, University of Verona (a.y. 2024/2025 &amp; a.y. 2025/2026)</li>
+</ul>
+
+<h2>Additional Teaching Experience (selected)</h2>
+<ul>
+  <li>16-hour courses in Academic Reading-Writing &amp; Master's Thesis Writing, Master's degree in Government, Administration, &amp; Politics (GAP), LUISS Guido Carli (a.y. 2023/2024, a.y. 2024/2025, &amp; a.y. 2025/2026)</li>
+  <li>Mixed-methods approaches to surveying LGBT+ issues and population, Italian Political Science Association (SISP)’s Gender and Politics Standing Group’s 1st International Summer School at the University of Verona</li>
+  <li>Teaching assistant across bachelor's and master's degree courses in Political Science, Research Methods, Statistics and Data Analysis for Public Policy, Public Opinion and Voting Behaviour, LUISS Guido Carli (2021-2024)</li>
+</ul>
+
+<h2>Supervision experience</h2>
+<ul>
+  <li>Co-supervisor of ~20 theses in Political Science, Bachelor's degree in Strategic Studies for Security and International Policies, University of Verona (a.y. 2024/2025 &amp; a.y. 2025/2026)</li>
+</ul>
+
+</div>
