--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,1 +1,39 @@
+---
+title: Contact
+permalink: /contact/
+author_profile: true
+---
 
+<h2>Contact</h2>
+
+<p>
+Feel free to get in touch with me by using the form below!
+</p>
+
+<form
+  action="https://formspree.io/f/xlgeapkg"
+  method="POST"
+  class="contact-form"
+>
+
+  <label for="name">Name</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="surname">Surname</label>
+  <input type="text" id="surname" name="surname" required>
+
+  <label for="email">Email</label>
+  <input type="email" id="email" name="_replyto" required>
+
+  <label for="subject">Subject</label>
+  <input type="text" id="subject" name="subject" required>
+
+  <label for="message">Message</label>
+  <textarea id="message" name="message" rows="6" required></textarea>
+
+  <!-- Optional: anti-spam -->
+  <input type="hidden" name="_captcha" value="false">
+
+  <button type="submit">Send message</button>
+
+</form>
