--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -1,1 +1,11 @@
+---
+title: Outreach
+permalink: /outreach/
+author_profile: true
+---
 
+<p>
+So far, my main outreach activities have revolved around academic blogposts and providing commentary on local politics in my home region of Umbria (in Italian). My research has also been covered in international media. 
+
+You can get in touch with me by using the <a href="https://federicotrastulli.github.io/contact/">contact form</a>.
+</p>
