--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -121,3 +121,47 @@ You can get in touch with me by using the
     </p>
   </div>
 </div>
+
+<h2>Podcasts</h2>
+
+<div class="article-card left">
+  <a href="https://open.spotify.com/episode/4urFePxoQKv8pQbcFsXiUC?si=cxRTQE7xQ_e_15Nsd5PHTw"
+     target="_blank" rel="noopener">
+    <img src="/images/prideandpolitics2.jpg"
+         alt="Pride &amp; Politics Podcast"
+         class="article-image">
+  </a>
+
+  <div class="article-content">
+    <h3 class="article-title">
+      <a href="https://open.spotify.com/episode/4urFePxoQKv8pQbcFsXiUC?si=cxRTQE7xQ_e_15Nsd5PHTw"
+         target="_blank" rel="noopener">
+        Ep. 2 – Quello che i sondaggi (non) dicono
+      </a>
+    </h3>
+    <p class="article-meta">
+      <em>Pride &amp; Politics Podcast</em>
+    </p>
+  </div>
+</div>
+
+<div class="article-card right">
+  <a href="https://open.spotify.com/episode/2Co7b1JwdqkP0xOjshNTWi?si=r5JJKTfES5u-_jxuXjGGCQ"
+     target="_blank" rel="noopener">
+    <img src="/images/prideandpolitics1.jpg"
+         alt="Pride &amp; Politics Podcast"
+         class="article-image">
+  </a>
+
+  <div class="article-content">
+    <h3 class="article-title">
+      <a href="https://open.spotify.com/episode/2Co7b1JwdqkP0xOjshNTWi?si=r5JJKTfES5u-_jxuXjGGCQ"
+         target="_blank" rel="noopener">
+        Ep. 1 – Un progetto di ricerca, le proteste anti-LGBT e un appuntamento importante
+      </a>
+    </h3>
+    <p class="article-meta">
+      <em>Pride &amp; Politics Podcast</em>
+    </p>
+  </div>
+</div>
