--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -127,7 +127,7 @@ You can get in touch with me by using the
 <div class="article-card left">
   <a href="https://open.spotify.com/episode/4urFePxoQKv8pQbcFsXiUC?si=cxRTQE7xQ_e_15Nsd5PHTw"
      target="_blank" rel="noopener">
-    <img src="/images/prideandpolitics2.jpg"
+    <img src="/images/prideandpolitics2.png"
          alt="Pride &amp; Politics Podcast"
          class="article-image">
   </a>
@@ -148,7 +148,7 @@ You can get in touch with me by using the
 <div class="article-card right">
   <a href="https://open.spotify.com/episode/2Co7b1JwdqkP0xOjshNTWi?si=r5JJKTfES5u-_jxuXjGGCQ"
      target="_blank" rel="noopener">
-    <img src="/images/prideandpolitics1.jpg"
+    <img src="/images/prideandpolitics1.png"
          alt="Pride &amp; Politics Podcast"
          class="article-image">
   </a>
