--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -92,7 +92,7 @@ You can get in touch with me by using the
     <h3 class="article-title">
       <a href="https://www.umbriaon.it/terni-dopo-perugia-e-la-regione-centrosinistra-e-pd-non-diano-nulla-per-scontato-ceccobelli-trastulli/"
          target="_blank" rel="noopener">
-        Dopo Perugia e la Regione, centrosinistra e PD non diano nulla per scontato
+        «Terni dopo Perugia e la Regione? Centrosinistra e PD non diano nulla per scontato»
       </a>
     </h3>
     <p class="article-meta">
@@ -113,7 +113,7 @@ You can get in touch with me by using the
     <h3 class="article-title">
       <a href="https://www.umbriaon.it/elezioni-regionali-le-analisi-dinamiche-nuove-leader-partiti-e-la-meridionalizzazione-del-ternano-intervista-ceccobelli-trastulli/"
          target="_blank" rel="noopener">
-        Elezioni regionali: dinamiche, nuovi leader e la “meridionalizzazione” del ternano
+        Elezioni regionali: dinamiche, nuovi leader e la “meridionalizzazione” del Ternano
       </a>
     </h3>
     <p class="article-meta">
