--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -17,7 +17,7 @@ author_profile: true
   <li>36-hour courses, Bachelor's degree in Strategic Studies for Security and International Policies, University of Verona (a.y. 2024/2025 &amp; a.y. 2025/2026)</li>
 </ul>
 
-<h2>Additional Teaching Experience (selected)</h2>
+<h2>Additional teaching experience (selected)</h2>
 <ul>
   <li>16-hour courses in Academic Reading-Writing &amp; Master's Thesis Writing, Master's degree in Government, Administration, &amp; Politics (GAP), LUISS Guido Carli (a.y. 2023/2024, a.y. 2024/2025, &amp; a.y. 2025/2026)</li>
   <li>Mixed-methods approaches to surveying LGBT+ issues and population, Italian Political Science Association (SISP)’s Gender and Politics Standing Group’s 1st International Summer School at the University of Verona</li>
