--- a/_pages/research.html
+++ b/_pages/research.html
@@ -9,9 +9,9 @@ author_profile: true
 <h2>Articles</h2>
 <ol>
   <li>
-    Off, G., &amp; <span class="me">Trastulli, F.</span> (2025).
+    Off, G., &amp; <span class="me">Trastulli, F.</span> (2026).
     Who Prioritises What? Determinants and Measurement of Voters’ Issue Prioritisation.
-    <em>European Journal of Political Research</em>.
+    <em>European Journal of Political Research</em>, <em>65</em>(1), 164–178.
     <a href="https://doi.org/10.1017/S1475676525100091" class="doi">
       https://doi.org/10.1017/S1475676525100091
     </a>
@@ -21,7 +21,7 @@ author_profile: true
   <li>
     <span class="me">Trastulli, F.</span> (2025).
     Left Parties’ Strategies and Working-Class Vote in Contemporary Western Europe (2002–2020).
-    <em>Electoral Studies</em>, 98, Article 103006.
+    <em>Electoral Studies</em>, <em>98</em>, Article 103006.
      <a href="https://doi.org/10.1016/j.electstud.2025.103006" class="doi">
       https://doi.org/10.1016/j.electstud.2025.103006
     </a>
@@ -51,7 +51,7 @@ author_profile: true
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2025).
     Rainbow Ballots: Introducing the Italian LGBTIQ+ Electoral Survey 2024.
-    <em>Italian Journal of Electoral Studies (IJES)</em>.
+    <em>Italian Journal of Electoral Studies (IJES)</em>, <em>88</em>(2), 21–33.
     <a href="https://doi.org/10.36253/qoe-17696" class="doi">
       https://doi.org/10.36253/qoe-17696
     </a>
@@ -71,7 +71,7 @@ author_profile: true
   <li>
     Capati, A., &amp; <span class="me">Trastulli, F.</span> (2025).
     A Quiet Convergence: Russian Full-Scale Invasion of Ukraine and Italian Parties’ Positions on the EU.
-    <em>Global Policy</em>, 16(1), 28–44.
+    <em>Global Policy</em>, <em>16</em>(1), 28–44.
     <a href="https://doi.org/10.1111/1758-5899.13466" class="doi">
       https://doi.org/10.1111/1758-5899.13466
     </a>
@@ -81,7 +81,7 @@ author_profile: true
   <li>
     Emanuele, V., &amp; <span class="me">Trastulli, F.</span> (2025).
     Left governmental power and the reduction of inequalities in Western Europe (1871–2020).
-    <em>Perspectives on Politics</em>, 23(3), 924–943.
+    <em>Perspectives on Politics</em>, <em>23</em>(3), 924–943.
     <a href="https://doi.org/10.1017/S1537592724000628" class="doi">
       https://doi.org/10.1017/S1537592724000628
     </a>
@@ -91,7 +91,7 @@ author_profile: true
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2024).
     LGBTIQ+ Scholars within Political Science: An Exploratory Review of PSAs’ Good Practices and (Un)Available Data     
-    <em>Italian Political Science</em>, 19(3), 309–323.
+    <em>Italian Political Science</em>, <em>19</em>(3), 309–323.
     <a href="https://doi.org/10.69101/IPS.2024.19.3.7" class="doi">
       https://doi.org/10.69101/IPS.2024.19.3.7 
     </a>
@@ -101,7 +101,7 @@ author_profile: true
   <li>
     Emanuele, V., Guidi, M., Chiaramonte, A., Moschella, M., Bosco, A., Crulli, M., Improta, M., Lupi, M., Mannoni, E., Marino, B., Paparo, A., Piccolino, G., Sesti Osseo, G., Soare, S. C., <span class="me">Trastulli, F.</span>, &amp; Verzichelli, L. (2024).
     New Conflicts’ Mapping in the Age of Globalization (NEWCOMING).
-    <em>Italian Political Science</em>, 19(2), 168–180.
+    <em>Italian Political Science</em>, <em>19</em>(2), 168–180.
     <a href="https://doi.org/10.69101/IPS.2024.19.2.5" class="doi">
       https://doi.org/10.69101/IPS.2024.19.2.5 
     </a>
@@ -111,7 +111,7 @@ author_profile: true
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2024).
     Beyond electoral performance: reviewing and advancing the literature on LGBTIQ+ political careers.
-    <em>Italian Political Science Review – Rivista Italiana di Scienza Politica</em>, 54(2), 154–160.
+    <em>Italian Political Science Review – Rivista Italiana di Scienza Politica</em>, <em>54</em>(2), 154–160.
     <a href="https://doi.org/10.1017/ipo.2024.3" class="doi">
       https://doi.org/10.1017/ipo.2024.3 
     </a>
@@ -121,7 +121,7 @@ author_profile: true
   <li>
     <span class="me">Trastulli, F.</span>, &amp; Mastroianni, L. (2024).
     What's new under the sun? A corpus linguistic analysis of the 2022 Italian election campaign themes in party manifestos.
-    <em>Modern Italy</em>, 29(1), 51–72.
+    <em>Modern Italy</em>, <em>29</em>(1), 51–72.
     <a href="https://doi.org/10.1017/mit.2023.45" class="doi">
       https://doi.org/10.1017/mit.2023.45 
     </a>
@@ -131,7 +131,7 @@ author_profile: true
   <li>
     Capati, A., Improta, M., &amp; <span class="me">Trastulli, F.</span> (2024).
     COVID-19 and party competition over the EU: Italy in Early Pandemic Times.
-    <em>European Politics and Society</em>, 25(1), 93–114.
+    <em>European Politics and Society</em>, <em>25</em>(1), 93–114.
     <a href="https://doi.org/10.1080/23745118.2022.2095170" class="doi">
       https://doi.org/10.1080/23745118.2022.2095170 
     </a>
@@ -140,7 +140,7 @@ author_profile: true
   <li>
     Emanuele, V., &amp; <span class="me">Trastulli, F.</span> (2023).
     Squeezing Blood from a Turnip? The Resilience of Social Democratic Governmental Power in Western Europe (1871–2022)-
-    <em>Representation</em>, 60(4), 645–663.
+    <em>Representation</em>, <em>60</em>(4), 645–663.
     <a href="https://doi.org/10.1080/00344893.2023.2292174" class="doi">
       https://doi.org/10.1080/00344893.2023.2292174
     </a>
@@ -149,7 +149,7 @@ author_profile: true
   <li>
     <span class="me">Trastulli, F.</span> (2022).
     More Left or Left No More? An In-depth Analysis of Western European Social Democratic Parties' Emphasis on Traditional Economic Left Goals (1944–2021).
-    <em>Frontiers in Political Science</em>, 4, Article 873948.
+    <em>Frontiers in Political Science</em>, <em>4</em>, Article 873948.
     <a href="https://doi.org/10.3389/fpos.2022.873948" class="doi">
       https://doi.org/10.3389/fpos.2022.873948 
     </a>
@@ -159,7 +159,7 @@ author_profile: true
   <li>
     <span class="me">Trastulli, F.</span> (2022).
     Two is better than one? Testing a deductive MARPOR-based left-right index on Western Europe (1999-2019).
-    <em>Italian Journal of Electoral Studies (IJES)</em>, 85(2), 59–76.
+    <em>Italian Journal of Electoral Studies (IJES)</em>, <em>85</em>(2), 59–76.
     <a href="https://doi.org/10.36253/qoe-13796" class="doi">
       https://doi.org/10.36253/qoe-13796 
     </a>
@@ -169,7 +169,7 @@ author_profile: true
   <li>
     Improta, M., Mannoni, E., Marcellino, C., &amp; <span class="me">Trastulli, F.</span> (2022).
     Voters, issues, and party loyalty: the 2022 Italian election under the magnifying glass.
-    <em>Italian Journal of Electoral Studies (IJES)</em>, 85(2), 3–27.
+    <em>Italian Journal of Electoral Studies (IJES)</em>, <em>85</em>(2), 3–27.
     <a href="https://doi.org/10.36253/qoe-13956" class="doi">
       https://doi.org/10.36253/qoe-13956 
     </a>
@@ -179,7 +179,7 @@ author_profile: true
   <li>
     <span class="me">Trastulli, F.</span> (2022).
     «Fence-Building» or «Preservation»: The Paths to Social Democratic Nationalist Position-Taking in Western Europe (2008-2018).
-    <em>Polis</em>, 2, 189–218.
+    <em>Polis</em>, <em>2</em>, 189–218.
     <a href="https://www.rivisteweb.it/doi/10.1424/104521" class="doi">
       https://www.rivisteweb.it/doi/10.1424/104521 
     </a>
@@ -188,7 +188,7 @@ author_profile: true
   <li>
     <span class="me">Trastulli, F.</span> (2021).
     The Broken Promise of Postmaterialism?
-    <em>Italian Political Science</em>, 15(3), 273–304.
+    <em>Italian Political Science</em>, <em>15</em>(3), 273–304.
     <a href="https://doi.org/10.69101/IPS.2020.15.3.3" class="doi">
       https://doi.org/10.69101/IPS.2020.15.3.3 
     </a>
